prevent horizontal scroll bar

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  overflow-y: hidden;
   margin: 0 auto;
   display: grid;
   grid-template-columns:
