--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,7 +1,4 @@
 .main {
-  width: 100vw;
-  overflow-y: hidden;
-
   &--home {
     margin-bottom: 8rem;
     display: grid;
